--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "isolated-vm": "^5.0.1",
+    "mongoose": "^9.0.1",
     "nanoid": "^5.0.7",
     "node-fetch": "^3.3.2",
     "socket.io": "^4.7.5"
@@ -21,4 +22,3 @@
     "nodemon": "^3.1.0"
   }
 }
-
